[gd_scene load_steps=4 format=3 uid="uid://dio4x28yw0cco"]

[ext_resource type="Script" path="res://Game/UI/pause_menu.gd" id="1_f5iyv"]
[ext_resource type="Texture2D" uid="uid://dtb7dx7u0jowt" path="res://Assets/UserInterface/Gameplay/GoldSelection.png" id="2_a0daf"]
[ext_resource type="Theme" uid="uid://b4enoqhimu4lc" path="res://Assets/Themes/Button3.tres" id="2_awk1q"]

[node name="PauseMenu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f5iyv")

[node name="GoldSelection" type="Sprite2D" parent="."]
position = Vector2(-0.00519182, -0.428571)
scale = Vector2(1.26653, 0.857143)
texture = ExtResource("2_a0daf")
offset = Vector2(60.3067, 25)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
theme = ExtResource("2_awk1q")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Resume
"

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
theme = ExtResource("2_awk1q")
text = "Settings
"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
theme = ExtResource("2_awk1q")
text = "Exit Game
"

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 159.0
offset_top = -31.0
offset_right = 420.0
offset_bottom = 172.0

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
